mobile overflow fix

--- a/styles/Sass/base/__generic.scss
+++ b/styles/Sass/base/__generic.scss
@@ -25,6 +25,7 @@ main {
     height: 100vh;
     display: grid;
     place-items: center;
+    overflow: hidden;
     & button {
         cursor: pointer;
     }
